# bgfg

./: .gitignore  CMakeLists.txt  README.md  bgfg_gaussmix.cpp  build.sh  build_pip.sh  precomp.hpp
include/opencv4/opencv2/: bgsegm.hpp  cvconfig.h
python/: CMakeLists.txt  MANIFEST.in  setup.py  setup.py.in
